style/descricaoPet.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');


body{
    overflow-x: auto;

}

main{
    margin-top: 42px;
    margin-bottom: 81px;
    margin-left: 77px;
    margin-right: 50px;
    /* border: solid red; */
    
    display: flex;
    flex-direction: column;
    /* height: 1830px;
    min-height: 1195px; */


    /* align-items: center; */

    /* align-items: center; */
    /* margin-left: auto; */
    /* margin-right: auto; */
    /* width: 100%; */
    /* max-width: 1126px; */
    
    
}

.profile-section{
    display: flex;
    /* border: solid 2px green; */
    /* width: 1097.67px;
    max-width: 1097.67px; */

    width: 100%;
    /* min-width: 100%;
    min-width: 100%; */
}



main h1, h2, p, li{
    font-family: "Inter", sans-serif;

}

.profile-section img{
    border: dashed 1.5px #404040;
    border-radius: 50px;
    padding: 6px;
    /* 404040 */

    min-height: 80px;
    min-width: 80px;
}
.profile-section h1{
    /* border: solid 2px orange; */
    min-height: 25px;
    margin-top: 13px;
    margin-left: 7px;
    
    color: #0A453A ;
    font-size: 24px;
    font-weight: 500;
    font-optical-sizing: auto;
    font-style: normal;
}


/* ---------------- CARD 1 ------------------------*/

.card1{
    /* border: solid 2px black; */
    display: flex;
    /* flex-wrap: wrap; */
    gap: 44px;

    min-height: 371px;
    max-height: 371px;
    /* max-height: 800px; */

    /* width: 1008px; */
    width: 1085px;

    margin-bottom: 76px;
}

.card1-img{
    width: 439px;
    height: 349px;
    border-radius: 18px;
    border: solid 2px #EDEDED;

    /* margin-bottom: 3px; */
    margin-top: 18px;
}

.paw1{
    position: absolute;
    left: 224px;
    top: 129px;
}
.paw2{
    position: absolute;
    right: 80px;
    top: 118px;
}

.titulo-cards{
    color: #FFB30D;
}

.card1 article{
    background-color: #F9F9F9;
    border: solid 3px #EDEDED;
    display: flex;
    flex-direction: column;

    border-radius: 16px;
    /* padding: 20px; */
    gap: 30px;
    width: 525px;
    /* height: 220px; */
    max-height: 188px;
    /* max-height: 688px; */

    /* height: 188px; */
    /* altura que esconde dps do sunt in */
    margin-bottom: 54px;

    padding-bottom: 32px;
    padding-top: 14px;
    padding-left: 13px;
    padding-right: 5px;

    /* overflow: scroll; */
}

.card-info{
    display: flex;
    flex-wrap: wrap;
    width: 825px;
    height: 235px;

    position: relative;

    /* border: solid 2px red; */
}

.card1 ul{
    background-color: #F0F0F0;
    width: 89px;
    /* height: 80px; */
    border-radius: 16px;
    text-align: center;
    padding-top: 6px;
    padding-bottom: 19px;
    margin-right: 14px;

    display: flex;
    flex-direction: column;

    gap: 6px;
}

.card1 ul>li{
    /* color: #FFB30D; */
    font-weight: 900;
    font-size: 12px;
}

.card-info button{
    color: #FFFFFF;
    background-color: #F82C10;
    border: none;

    width: 217px;
    height: 80px;
    font-size: 24px;

    margin-left: 20px;
    border-radius: 8px;
}

.card-info button:active{
    color: #FFFFFF;
    background-color: #F82C10;

    box-shadow: #9b1f0f inset 483px 0 0;
    
    
}

.card-info article h1{
    font-size: 18px;
    
    color: #0A453A;
    font-weight: bolder;
    font-optical-sizing: auto;
    font-weight: bold;
    font-style: normal;
    font-family: "Inter", sans-serif;
}

/* ------------------ ver o overflow disso dps---------- */
.card-info article p{
    font-size: 16px;
    font-family: "Inter", sans-serif;
    font-weight: 420;
    line-height: 22px;

    width: 525px;

    overflow-x: scroll;
    overflow-x: auto;
    /* overflow: hidden;
    text-overflow: ellipsis;
     */

}


/* ---------------- CARD 2 ------------------------*/

h2{
    font-size: 28px;
    font-weight: 500;
    color: #0A453A;
}

.section-card2{
    /* border: solid 2px rgb(106, 100, 191); */
    /* position: relative; */
    height: 600px;
    width: 100%;
    /* width: 1074px; */

    display: flex;
    flex-wrap: wrap;

    margin-top: 16px;

    gap: 17px;
}

/* aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */





.more-card-container{
    border: solid 2px black;

    width: 484px;
    height: 250px;
}

.more-card{
    /* border: solid 2px #F82C10; */
    background-color: #F9F9F9;
    width: 484px;
    /* height: 200px; */
    /* width: 484px;
    height: 188px; */
    /* height: 267px; */
    
    text-align: center;
    align-items: center;
    /* justify-content: end; */
    display: flex;
    flex-direction: column;

    gap: 18px;
    border-radius: 16px;

    padding-top: 62px;
    padding-right: 24px;
    padding-left: 24px;
    padding-bottom: 24px;

    margin-top: 56px;
}

.more-card img{
    height: 107px;
    width: 107px;
    /* display: none; */
    /* bottom: 0px; */
    top: 0px;
    position: absolute;
    z-index: 2;
}

.more-card div{
    border: solid 7px #FFC027;
    height: 40px;
    width: 100px;
    
    position: absolute;
    top: 57px;

    z-index: 1;

    border-radius: 0 0 150px 150px ;
}

.position-container{
    /* position: relative; */
    /* border: solid 1px #000000; */
    width: 537px;
    height: 298px;
    position: relative;

}



.more-card ul{
    display: flex;
    flex-direction: column;
    gap: 18px;
}

.perfilTitulo{
    color: #FFC027;
    /* Lola 16 resto 14 */
    font-size: 17px;
}
.more-card ul:not(:first-child){
   
    font-size: 14px;
    font-weight: 500;
}

/* ---------------------- BOTOES -------------------------- */

.more-card button{
    border: solid 1.5px #F82C10;
    color: #F82C10;
    background-color: transparent;
    width: 484px;
    height: 48px;

    border-radius: 8px;
    /* padding-right: 24px;
    padding-left: 24px; */
    transition: box-shadow .6s ease;

}
.more-card button:hover{
    /* background-color: #ebcfcc; */
    cursor: pointer;
    right: -20px;
    transition: 0.5s;

  /* transition: box-shadow .6s ease; */
  box-shadow: #ebcfcc inset 483px 0 0;
}

button:hover{
    cursor: pointer;
    
}

